[tool.poetry]
name = "staging"
version = "0.1.0"
description = "staging"
authors = ["Shawn Lin <shawn@1scap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
databento = "^0.16.1"
oneutil = "^0.0.4"
boto3 = "^1.28.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
